force-app/main/default/objects/Opportunity/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <label>Admission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elective</fullName>
            </value>
            <value>
                <fullName>Emergent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>