force-app/main/default/objects/Opportunity/fields/Bed_Category__c.field-meta.xml
<CustomField>
    <fullName>Bed_Category__c</fullName>
    <label>Bed Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>