force-app/main/default/objects/Opportunity/fields/Bed_No__c.field-meta.xml
<CustomField>
    <fullName>Bed_No__c</fullName>
    <label>Bed No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>