force-app/main/default/objects/Opportunity/fields/Date_of_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Step__c</fullName>
    <label>Date of Next Step</label>
    <type>Date</type>
</CustomField>