force-app/main/default/objects/Opportunity/fields/Investigation_Advised__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Advised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investigation Advised</label>
    <type>Checkbox</type>
</CustomField>