force-app/main/default/objects/Opportunity/fields/Nursing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Unit__c</fullName>
    <label>Nursing Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>