force-app/main/default/objects/Opportunity/fields/Patient_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Case_Record_Type__c</fullName>
    <label>Patient Case Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>