force-app/main/default/objects/Opportunity/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <label>Payor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Pay</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>