force-app/main/default/objects/Opportunity/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <formula>Payment__c -  Advance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>