force-app/main/default/objects/Opportunity/fields/Practitioner_Name__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Cases</relationshipLabel>
    <relationshipName>Patient_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>