force-app/main/default/objects/Opportunity/fields/Radiology_Dept__c.field-meta.xml
<CustomField>
    <fullName>Radiology_Dept__c</fullName>
    <label>Radiology Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>