force-app/main/default/objects/Opportunity/fields/Reports_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Reports_Requested_By__c</fullName>
    <label>Reports Requested By</label>
    <type>Date</type>
</CustomField>