force-app/main/default/objects/Opportunity/fields/Type_of_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Investigation__c</fullName>
    <label>Type of Investigation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>